--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -65,13 +65,13 @@ jobs:
       uses: aws-actions/amazon-ecs-render-task-definition@v1
       with:
         task-definition: task-def.json
-        container-name: my-container
+        container-name: fargate-app
         image: ${{ steps.build-image.outputs.image }}
 
     - name: Deploy Amazon ECS task definition
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
       with:
         task-definition: ${{ steps.task-def.outputs.task-definition }}
-        service: my-service
-        cluster: my-cluster
+        service: fargate-service
+        cluster: default
         wait-for-service-stability: true
