--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -23,12 +23,11 @@
 #    See the documentation for each action used below for the recommended IAM policies for this IAM user,
 #    and best practices on handling the access key credentials.
 
-on:
-  release:
-    types: [created]
-
 name: Deploy to Amazon ECS
-
+on:
+    push:
+        branches: [ master ]
+        
 jobs:
   deploy:
     name: Deploy
