--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -24,9 +24,9 @@
 #    and best practices on handling the access key credentials.
 
 name: Deploy to Amazon ECS
-on:
-    push:
-        branches: [ master ]
+#on:
+#    push:
+#        branches: [ master ]
         
 jobs:
   deploy:
