--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,9 +1,5 @@
 version: 0.2
 phases:
-  install:
-    runtime-versions:
-      python: 3.8
-  pre_build:
+  build:
     commands:
-      - pip install -r requirements.txt
-      - python app_test.py
+      - echo '...replace with real build commands...'
