--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -34,20 +34,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:  
+    # This action checks-out your repository under $GITHUB_WORKSPACE, so your workflow can access it.
     - name: Checkout
       uses: actions/checkout@v2
 
+    # AWS credentials via github secrets
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: eu-central-1
+        aws-region: us-west-1
 
+    # inloggen op AWS ECR
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
 
+    # het bouwen en taggen van een image
 #    - name: Build, tag, and push image to Amazon ECR
 #      id: build-image
 #      env:
@@ -59,15 +63,18 @@ jobs:
 #        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 #        echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
+    # opzetten van een task definition via github 
     - name: Fill in the new image ID in the Amazon ECS task definition
       id: task-def
       uses: aws-actions/amazon-ecs-render-task-definition@v1
       with:
         task-definition: task-definition.json
         container-name: ecs-devops-sandbox
-        image: 334142185887.dkr.ecr.eu-central-1.amazonaws.com/ecs-devops-sandbox-repository:cf7cc308c22242dd860bfa0f232e6e2bdf20ded1
-#        image: ${{ steps.build-image.outputs.image }}
+        #image: 334142185887.dkr.ecr.eu-central-1.amazonaws.com/ecs-devops-sandbox-repository:cf7cc308c22242dd860bfa0f232e6e2bdf20ded1
+        image: ${{ steps.build-image.outputs.image }}
 
+
+    # deployen van de task met daarbij de behorende service en cluster
     - name: Deploy Amazon ECS task definition
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
       with:
