--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -70,8 +70,9 @@ jobs:
       with:
         task-definition: task-definition.json
         container-name: ecs-devops-sandbox
+        image: httpd:2.4
         #image: 334142185887.dkr.ecr.eu-central-1.amazonaws.com/ecs-devops-sandbox-repository:cf7cc308c22242dd860bfa0f232e6e2bdf20ded1
-        image: ${{ steps.build-image.outputs.image }}
+        #image: ${{ steps.build-image.outputs.image }}
 
 
     # deployen van de task met daarbij de behorende service en cluster
