--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -69,7 +69,7 @@ jobs:
       uses: aws-actions/amazon-ecs-render-task-definition@v1
       with:
         task-definition: task-definition.json
-        container-name: ecs-devops-sandbox
+        container-name: httpd
         image: httpd:2.4
         #image: 334142185887.dkr.ecr.eu-central-1.amazonaws.com/ecs-devops-sandbox-repository:cf7cc308c22242dd860bfa0f232e6e2bdf20ded1
         #image: ${{ steps.build-image.outputs.image }}
@@ -80,6 +80,6 @@ jobs:
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
       with:
         task-definition: ${{ steps.task-def.outputs.task-definition }}
-        service: ecs-devops-sandbox-service
-        cluster: ecs-devops-sandbox-cluster
+        service: TestTask
+        cluster: TestCluster
         wait-for-service-stability: true
