--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -80,6 +80,6 @@ jobs:
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
       with:
         task-definition: ${{ steps.task-def.outputs.task-definition }}
-        service: TestTask
+        #service: TestTask
         cluster: TestCluster
         wait-for-service-stability: true
