--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -14,8 +14,7 @@ jobs:
       uses: actions/checkout@v2
 
     -   name: SSH-ing into EC2 instance
-        run: sudo apt-get install sshpass -y  && \
-            sshpass -p TNO ssh ubuntu@52.207.254.225
+        run: sshpass -p TNO ssh ubuntu@52.207.254.225
             wget https://github.com/LSVH/hbo-ict-inno-s2-tno.git /test && \
             cd /test/docker/src/ && \
             docker-compose up -d
