--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -23,7 +23,7 @@ jobs:
             privateKey: ${{ secrets.PRIVATE_KEY}}
 
     - name: Running containers
-      run: git clone https://github.com/LSVH/hbo-ict-inno-s2-tno.git /test && \
+      run: sudo git clone https://github.com/LSVH/hbo-ict-inno-s2-tno.git /test && \
                 docker-compose up -f /test/docker/src up -d
             
     env:
